--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="sv">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="manifest" href="/BoundlessGrimoire/manifest.webmanifest">
-    <link rel="icon" href="/Boundless-Grimoire/favicon.svg">
+    <meta name="theme-color" content="#0b0b0b" />
+
     <title>Boundless Grimoire</title>
+
+    <!-- PWA manifest -->
+    <link rel="manifest" href="/Boundless-Grimoire/manifest.webmanifest" />
+    <link rel="icon" type="image/svg+xml" href="/Boundless-Grimoire/favicon.svg" />
+    <link rel="apple-touch-icon" href="/Boundless-Grimoire/apple-touch-icon.png" />
   </head>
-  <body class="bg-black text-neutral-100">
+
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
