--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#0b0b0b" />
 
     <title>Boundless Grimoire</title>
 
-    <!-- PWA manifest -->
+    <!-- PWA -->
+    <meta name="theme-color" content="#0b0b0b" />
     <link rel="manifest" href="/Boundless-Grimoire/manifest.webmanifest" />
     <link rel="icon" type="image/svg+xml" href="/Boundless-Grimoire/favicon.svg" />
     <link rel="apple-touch-icon" href="/Boundless-Grimoire/apple-touch-icon.png" />
   </head>
-
-  <body>
+  <body class="bg-black text-neutral-100">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
